Adding h1 to our code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Meal Finder</title>
   </head>
   <body>
+    <h1>Hello This is github</h1>
     <div class="container">
       <h1>Meal Finder</h1>
       <div class="flex">
